third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/include_value_wrong_size.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/include_value_wrong_size.rs:11:25
   |
11 | const WRONG_SIZE: u64 = include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 4]` (32 bits)
   = note: target type: `u64` (64 bits)
   = note: this error originates in the macro `$crate::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
